fix bleeding add task and offset labels

--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -78,7 +78,7 @@ body {
 	grid-template-areas:
 	 	"header"
 		"img"
-		"div";
+		"footer";
 
 
 	header {
@@ -110,8 +110,8 @@ body {
 		background-color: #d2e4fd;
 	}
 
-	div {
-		grid-area: div;
+	footer {
+		grid-area: footer;
 		display: flex;
 		align-items: center;
 		flex-direction: column;
@@ -156,6 +156,11 @@ body {
 			margin-bottom: 7px;
 			margin-left: 2.5%;
 		}
+
+		div {
+			display: flex;
+			align-items: center;
+		}
 	}
 
 	ul {
@@ -183,18 +188,21 @@ body {
 		label {
 			display: flex;
 			align-items: flex-start;
+			display: inline-block;
 			padding-left: 20px;
-			margin-bottom: 10px;
 
 			input {
 				display:inline-block;
 			}
+		}
 
-			textarea {
-				border: none;
-				width: 100%;
-				margin-left: 10px;
-			}
+		textarea {
+			border: none;
+			display: inline-block;
+			background-color: transparent;
+			padding: 0;
+			padding-left: 10px;
+			width: 75%;
 		}
 
 		.update-task {
@@ -266,6 +274,8 @@ body {
 		background: azure;
 		border: none;
 		border-radius: 4px;
+		padding-left: 10px;
+		width:100%;
 		height: 46px;
 	}
 
